--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tauri-apps/plugin-sql": "^2.3.1",
     "lucide-react": "^0.562.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
